# Python

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
docs/source/: api.rst  frameworks.rst  index.rst  installation.rst  quickstart.rst
examples/: api_client.py  direct_api.py  django_integration.py  flask_integration.py  smtp_client.py
src/shoutbox/: __init__.py  client.py  models.py  smtp.py
tests/: conftest.py  run_test.sh  test_client.py  test_django.py  test_models.py  test_smtp.py
